[gd_scene load_steps=13 format=3 uid="uid://cn8ima5k36ra1"]

[ext_resource type="Script" path="res://data/modules/tactics/level/tactics_level.gd" id="1_mlenb"]
[ext_resource type="Resource" uid="uid://c2mvnq00bfcw5" path="res://data/models/view/camera/tactics/camera.tres" id="2_gd7sd"]
[ext_resource type="PackedScene" uid="uid://6af3iymssgfr" path="res://assets/maps/level/arena/first_arena.tscn" id="3_d5ndv"]
[ext_resource type="Script" path="res://data/modules/tactics/level/participants/tactics_participant.gd" id="4_xd041"]
[ext_resource type="Script" path="res://data/modules/tactics/level/participants/player/tactics_player_one.gd" id="5_67cq4"]
[ext_resource type="PackedScene" uid="uid://6eofg7n4asn5" path="res://data/modules/tactics/level/pawn/pawn.tscn" id="6_f2vbh"]
[ext_resource type="PackedScene" uid="uid://8x2rssxosm7i" path="res://data/modules/stats/expertise/expertise.tscn" id="7_ci7pn"]
[ext_resource type="Resource" path="res://data/models/world/stats/expertise/freddy.tres" id="9_6dufj"]
[ext_resource type="Script" path="res://data/modules/tactics/level/participants/player/tactics_player_two.gd" id="10_1ycm4"]
[ext_resource type="Resource" uid="uid://1fetqfwxu88y" path="res://data/models/world/stats/expertise/archer.tres" id="10_prwkc"]
[ext_resource type="Script" path="res://data/modules/tactics/level/participants/opponent/tactics_opponent.gd" id="13_eawdf"]
[ext_resource type="Resource" uid="uid://c065vh6vqrtcc" path="res://data/models/world/stats/mobs/skeleton.tres" id="14_6njkw"]

[node name="TacticsLevel" type="Node3D"]
script = ExtResource("1_mlenb")
camera = ExtResource("2_gd7sd")
camera_boundary_radius = 13.0

[node name="TacticsArena" parent="." instance=ExtResource("3_d5ndv")]
unique_name_in_owner = true

[node name="TacticsParticipant" type="Node3D" parent="."]
script = ExtResource("4_xd041")

[node name="TacticsPlayer1" type="Node3D" parent="TacticsParticipant"]
unique_name_in_owner = true
script = ExtResource("5_67cq4")

[node name="Pawn" parent="TacticsParticipant/TacticsPlayer1" instance=ExtResource("6_f2vbh")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.89967, 0.41081, -2.14801)

[node name="Expertise" parent="TacticsParticipant/TacticsPlayer1/Pawn" instance=ExtResource("7_ci7pn")]
starting_stats = ExtResource("9_6dufj")

[node name="Pawn2" parent="TacticsParticipant/TacticsPlayer1" instance=ExtResource("6_f2vbh")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.18374, 0.377293, -2.05617)

[node name="Expertise" parent="TacticsParticipant/TacticsPlayer1/Pawn2" instance=ExtResource("7_ci7pn")]
starting_stats = ExtResource("10_prwkc")

[node name="TacticsPlayer2" type="Node3D" parent="TacticsParticipant"]
unique_name_in_owner = true
script = ExtResource("10_1ycm4")

[node name="Pawn" parent="TacticsParticipant/TacticsPlayer2" instance=ExtResource("6_f2vbh")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.89967, 0.41081, -2.14801)

[node name="Expertise" parent="TacticsParticipant/TacticsPlayer2/Pawn" instance=ExtResource("7_ci7pn")]
starting_stats = ExtResource("9_6dufj")

[node name="Pawn2" parent="TacticsParticipant/TacticsPlayer2" instance=ExtResource("6_f2vbh")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.18374, 0.377293, -2.05617)

[node name="Expertise" parent="TacticsParticipant/TacticsPlayer2/Pawn2" instance=ExtResource("7_ci7pn")]
starting_stats = ExtResource("10_prwkc")

[node name="TacticsOpponent" type="Node3D" parent="TacticsParticipant"]
unique_name_in_owner = true
script = ExtResource("13_eawdf")

[node name="Pawn" parent="TacticsParticipant/TacticsOpponent" instance=ExtResource("6_f2vbh")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 1.40727, 0.457808, 1.70884)

[node name="Expertise" parent="TacticsParticipant/TacticsOpponent/Pawn" instance=ExtResource("7_ci7pn")]
starting_stats = ExtResource("14_6njkw")

[node name="Pawn2" parent="TacticsParticipant/TacticsOpponent" instance=ExtResource("6_f2vbh")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 2.15274, 0.42007, -1.52221)

[node name="Expertise" parent="TacticsParticipant/TacticsOpponent/Pawn2" instance=ExtResource("7_ci7pn")]
starting_stats = ExtResource("14_6njkw")
